--- a/Dokumentation/content/Content.tex
+++ b/Dokumentation/content/Content.tex
@@ -843,8 +843,6 @@ The inaccuracy would have to be considered. Using multiple sensors might be a wa
 \section{Velocity measurement sensor}
 Inaccuracy in velocity measurement (Requirement R5) have been discussed in section \ref{sec:D5_v}.
 
-Inaccuracies of the velocity measurement have already been analysed in chapter \ref{cha:D5}.
-
 \section{Impact of execution timing}
 
 This section analyses the impact of the given period times. The vehicle velocity is available every 10 ms and the ultrasonic distance is available every 2 ms.
@@ -863,29 +861,41 @@ Considering only the different execution times and neglecting other inaccuracies
 
 \chapter{D14*: Reflection}\label{cha:D14}
 
-Which other observations or comments are in place concerning the planning, the modeling, the requirements, the prescribed functions, or your solution, the testing, and the selected graphical approach.
+This chapter consists of a reflection on the project and a description which observations have been made concerning the planning, the modeling, the requirements, the prescribed functions, our solution, the testing and the selected graphical approach.
 
--unterschied simulink matlab
--ultrasonic reichweite
--no feedback
+\begin{itemize}
+\item The Planning was very helpful and it is interesting to compare the expected complexity and the actual complexity of the tasks. Overall, we are satisfied with our estimation of the complexity. The only thing we underestimated was the generation of the pulse signal.
+\item The model is not completely realistic. There is 
+no possibility to accelerate and a drop from 0.29 km/h to 0 km/h is also unrealistic. The model could also be extended to include moving objects so that it would be necessary to include the ultrasonic distance in p(t).
+\item Requirements D5 and D13 overlap and it was difficult for us to separate them. Moreover, we were not sure if in requirement D3 the brake pedal function should already be determined or if only an idea for the function should be described.
+\item The prescribed functions/values made the implementation easier. It would have been more complicated if for example stops from various velocities or within various distances would have been considered. The friction and braking constant are comparatively high so that without accelerating it was not possible to get a smooth velocity drop.
+\item The developed brake pedal function in our solution is only dependant on the time, therefore external conditions are not recognised.
+If, for example a person would step in front of the car, the car would run over that person, even though the ultrasonic sensor might recognise the person. To prevent that the distance from the ultrasonic sensor would have to be included in the ParkAssist controller. In the future, it would be better to implement a controller for the applied braking pressure instead of a regulation.
+\item Unit tests were easy to implement and very helpful. This way, failures that have been made along the way could be detected quickly.  
+\item Graphical modeling worked out well for us. The only disadvantage that we experienced was that if-clauses can be complex to implement graphically, in particular if there are various if-clauses in series. Having many if-clauses may also lead to an unclear block diagram. 
+\end{itemize}
 
--no air friction, but relatively low at low speed
--1.5 friction
--sensor inaccuracies normally follow a statistic distribution and do not have discrete borders
-
--parkassist limits
-
-\section{Model inaccuracies}
-The model is not completely realistic. There is 
--no possibility to accelerate
--drop from 0.29 km/h
-\section{Computation inaccuracies}
--rundungsfehler
-
-\section{ParkAssist limitations}
--no steering
--only 2 meter stop considered
-The developed controller is only dependant on the time, therefore external conditions are not recognised.
-If, for example a person would step in front of the car, the car would run over that person, even though the ultrasonic sensor might recognise the person. To prevent that the distance from the ultrasonic sensor would have to be included in the ParkAssist controller.
-
--no feedback control
+%-unterschied simulink matlab
+%-ultrasonic reichweite
+%-no feedback
+%
+%-no air friction, but relatively low at low speed
+%-1.5 friction
+%-sensor inaccuracies normally follow a statistic distribution and do not have discrete borders
+%
+%-parkassist limits
+%
+%\section{Model inaccuracies}
+%The model is not completely realistic. There is 
+%-no possibility to accelerate
+%-drop from 0.29 km/h
+%\section{Computation inaccuracies}
+%-rundungsfehler
+%
+%\section{ParkAssist limitations}
+%-no steering
+%-only 2 meter stop considered
+%The developed controller is only dependant on the time, therefore external conditions are not recognised.
+%If, for example a person would step in front of the car, the car would run over that person, even though the ultrasonic sensor might recognise the person. To prevent that the distance from the ultrasonic sensor would have to be included in the ParkAssist controller.
+%
+%-no feedback control
