--- a/Dokumentation/content/Content.tex
+++ b/Dokumentation/content/Content.tex
@@ -3,11 +3,10 @@
 \chapter{Introduction}\label{cha:Introduction}
 In this project Matlab version R2019b and ASCET version 7.4 have been used.
 The Matlab and Simulink code is in the Matlab subfolder and the ASCET project is in the ASCET subfolder.
-Simulink settings:
 The report is structured by devoting one chapter to each requirement.
 
-In ASCET mainly graphical programming using block diagrams is used due to requirement D7. Even though D8 does not demand graphical programming, for consistency reasons D8 is being graphically modelled as well. Exceptions are the unit tests. The test are programmed in ESDL because some test have a lot of test cases which would lead to a large block diagram that would likely be unclear.\\
-For the simulink models the ode8 solver is used, because it is the most precise fixed step solver. As step-width, 0.01s are used to provide efficiency but also the necessary precision.
+In ASCET mainly graphical programming using block diagrams is used due to requirement D7. D8 is graphically programmed as well because the pulse signal in Simulink is programmed graphically. Exceptions are the unit tests. The test are programmed in ESDL because some test have a lot of test cases which would lead to a large block diagram that would likely be unclear.\\
+For the Simulink models the ode8 solver is used, because it is the most precise fixed step solver. As step-width, 0.01s is used to provide efficiency but also the necessary precision.
 
 \chapter{D1: Time estimate based on three point estimation}\label{cha:D1}
 For the three point estimation we use the formuals from the lecture.
@@ -77,7 +76,7 @@ The aim of the feasibility study is to analyse whether it is possible to realise
 with $c = 1.5\; m/s^2$ and $b = 10\; m/s^2$.
 For that, in the next section a Simulink model is created, based on the equations above.
 After that, a test scenario to test the feasibility is described and in section \ref{sec:D2_results} the results of the study are outlined.
-Section 
+
 \section{Simulink model}\label{sec:D2_model}
 Figure \ref{fig:D2_Sim} shows the simulink model representing the differential equations above.
 The parameter $p$ is configured on execution of the simulation in Matlab.
@@ -110,9 +109,6 @@ Listing \ref{lst:D2_matlab} shows the script that executes the simulation and st
 The code to create the result plots has been excluded.
 In lines one to eight the simulation is parametrized.
 A stop time of 2 seconds is chosen because the car will come to a stop before.
-
-todo solver begründen
-
 The constant brake pressure is set to 5 \%.
 This value results in a stop before the car traveled 2 meters of distance and is also reasonably small.
 
@@ -250,8 +246,8 @@ decreasing_velocity(isnan(neg_acceleration)) = nan;
 For better visualisation, the breaking sequences that can be seen in figure \ref{fig:D3_IndividualBraking} will be stored separately.
 One breaking sequence consists of multiple consequent velocity measurements.
 This means that the breaking sequences can be separated by searching for a gap in the velocity measurements (\ac{NaN} values).
-Therefore, the indices of all velocities that are set not \ac{NaN} are extracted (line 2 in listing \ref{lst:D3Seperat}) and differentiated (line 3 in listing \ref{lst:D3Seperat}).
-Consequently, every differentiation that is greater than 1 marks a gap between velocities because indices of one braking sequence are subsequent (differentiation equals 1).
+The indices of all velocities that are not \ac{NaN} are extracted (line 2 in listing \ref{lst:D3Seperat}) and differentiated (line 3 in listing \ref{lst:D3Seperat}).
+Every differentiation that is greater than 1 marks a gap between velocities because indices of one braking sequence would be subsequent (differentiation equals 1).
 Furthermore, short breaking sequences are not considered because they are most likely not relevant for recognizing a breaking pattern (line 13 in listing \ref{lst:D3Seperat}).
 Two individual breaking sequences can be seen in figure \ref{fig:D3_IndividualBraking1} and figure \ref{fig:D3_IndividualBraking2}.
 
@@ -335,7 +331,7 @@ The integrator that integrates the constant 1 provides the time input to the loo
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{images/D3_model_extension.png}
-\caption{Simulation without braking}
+\caption{p(t) Simulink model}
 \label{fig:D3_IndividualBraking2}
 \end{figure}
 By adjusting the parameters of the lookup-table the following values have been selected to provide smooth human-like braking.
@@ -357,7 +353,7 @@ By adjusting the parameters of the lookup-table the following values have been s
 
 Figure \ref{fig:D3_pt} shows the results of the Simulink simulation using the parameters from the table above.
 With 10 km/h as $v_0$ the car comes to a stop at approximately 1.92 meters.
-This leaves a margin for velocity measurement inaccuracies, which will be analysed in chapter \ref{cha:D5} todo check.
+This leaves a margin for velocity measurement inaccuracies, which will be analysed in chapter \ref{cha:D5}f.
 The acceleration curve in the third subplot is similar to a human profile, with the exception of the offset of $-1.5\; m/s^2$.
 This can not be prevented because there is no gas pedal.
 It can also be seen that at the end of the braking procedure at approximately 1.2 s, the brake pedal is released and the friction brings the car to stop.
@@ -405,7 +401,7 @@ It would be dangerous if the initial velocity would be higher than expected, bec
 This might cause an accident.
 If it would be lower, the car might stop earlier but that would not lead to an accident.\\
 A simulation is used to evaluate the danger of the initial velocity being higher than expected.
-The, highest initial velocity that is possible with R5 is 10.1 km/h.
+The highest initial velocity that is possible with R5 is 10.1 km/h.
 So this is used as $v_0$ for the impact evaluation.
 The model from Figure \ref{fig:D3_IndividualBraking2} from before is used for the evaluation, to see if the margin to 2 m is enough with a $v_0$ of 10.1 km/h.\\
 As can be seen from the results of the simulation in figure \ref{fig:D5_results} the margin is enough, since the stopping distance is approximately 1.96 m.
@@ -508,7 +504,7 @@ Figure \ref{fig:D6_Result} shows a demonstration of the implemented pulse signal
 This chapter describes how the Simulink model from section \ref{sec:D3_dev_pt} is transferred to ASCET (and the ultrasonic distance is added).
 Furthermore, as ASCET is time discrete execution slots for threads are defined.
 
-First, messages are defined to describe the needed data interfaces. Listing \ref{lst:D7_Messages} shows the two defined message interfaces. The first interface represents messages regarding the car including its velocity, its acceleration, its position, the ultrasonic distance and the pulse signal. The other interface contains a message that describes the current brake pedal position.
+First, messages are defined to describe the needed data interfaces. Listing \ref{lst:D7_Messages} shows the three defined message interfaces. The first interface represents messages regarding the car including its velocity, its acceleration, its position, the ultrasonic distance and the pulse signal. The second interface contains a message that describes the current brake pedal position. The third interface represents the status of the system test.
 
 \begin{lstlisting}[language=Java,basicstyle=\scriptsize, caption= Defined messages in ASCET,label= lst:D7_Messages]
 data interface CarMessages {
@@ -521,6 +517,10 @@ data interface CarMessages {
 
 data interface ParkAssistMessages {
 	real brake = 0.0;
+}
+
+data interface StateHandlerMessages {
+	boolean systemTest = true; 
 }
 \end{lstlisting}
 
@@ -593,8 +593,8 @@ The third subplot shows the covered distance of the car, which is clearly under 
 \chapter{D8: Implementation of pulse signal in ASCET}\label{cha:D8}
 
 The pulse signal that has been implemented in Simulink (see chapter \ref{cha:D6}) is transferred to ASCET in this chapter.
-The ASCET model consists of three sub-models described in three block diagrams. Two of the sub-models are regular classes that can be instantiated. This makes the whole model modular and the sub-models are able to be unit tested. One of the two classes calculates a frequency based on a given velocity and position of the car. The second class generates a pulse signal based on the calculated frequency.
-The third class is a static class that passes the calculated frequency to the pulse signal generating class. The static class is also responsible for receiving the velocity and position messages of the car and pass them to the frequency computation class as well as sending the generated pulse signal as a new message. This can be seen in figure \ref{fig:BlockdiagrammFrequencyComputation} that shows the block diagram of the static class.
+The implementation in ASCET consists of the three classes $FrequencyComputation$, $FrequencyComputationClass$ and $PulseSignalClass$. $FrequencyComputationClass$ and $PulseSignalClass$ are "regular" classes that can be instantiated so that they can be unit tested. $FrequencyComputationClass$ calculates a frequency based on a given velocity and position of the car. $PulseSignalClass$ generates a pulse signal based on the calculated frequency.
+$FrequencyComputation$ is a static class that receives the velocity and position messages of the car and passes them to $FrequencyComputation$. It then passes the calculated frequency to $PulseSignalClass$ and sends the generated pulse signal as a new message. Figure \ref{fig:BlockdiagrammFrequencyComputation} shows the block diagram of $FrequencyComputation$.
 
 \begin{figure}[H]
 \centering
@@ -653,30 +653,31 @@ The goal of the test case coverage is to cover every equivalence class and, in a
 
 \section{Unit tests for DriveModel}
 
-$DriveModel$ computes acceleration, velocity, position and ultrasonic distance based on a defined time and brake pedal position. There are two equivalence classes. One equivalence class covers all velocities greater than 0.29 km/h and the other all velocities less or equal 0.29 km/h. As only one time step is simulated while unit testing the position will remain zero if the computed velocity is zero. Defined test cases can be seen in the table below.
+$DriveModel$ computes acceleration (acc), velocity (v), position (p) and ultrasonic distance (ud) based on a defined time and brake pedal position. There are two equivalence classes. One equivalence class covers all velocities greater or equal 0.29 km/h and the other all velocities less than 0.29 km/h. Defined test cases can be seen in the table below. The first two test cases belong to the equivalence class that describe a velocity greater or equal 0.29 km/h, the third test case belongs to the equivalence class that describe a velocity less than 0.29 km/h.
 
 \begin{table}[H]
 \centering
-\caption{Test cases for unit testing driveModel}
+\caption{Test cases for unit testing DriveModel}
 \begin{adjustbox}{width=1\textwidth, center=\textwidth}
 \renewcommand{\arraystretch}{1}
 \begin{tabular}{lllllll}
-\textbf{Brake pedal} & \textbf{Time constant [s]} & \textbf{Acceleration [m/s]} &\textbf{Velocity [km/h]} & \textbf{Position [m]} & \textbf{Ultrasonic distance [m]} \\\hline
+\textbf{Brake pedal} & \textbf{Time constant [s]} & \textbf{Expected acc [m/s]} &\textbf{Expected v [km/h]} & \textbf{Expected p [m]} & \textbf{Expected ud [m]} \\\hline
 p = 0.0 & dTs = 1.0 & acc = -1.5 & v = 4.6 & s $\approx$ 1.278 & u $\approx$ 0.722\\
 p = 0.5 & dTs = 0.1 & acc = -6.5 & v = 7.66 & s $\approx$ 0.213 & u $\approx$ 1.787\\
+p = 1.0 & dTs = 1.0 & acc = -11.5 & v = 0 & s = 0 & u = 2\\
 \label{tab:D10_drivemodel}
 \end{tabular}
 \end{adjustbox}
 \end{table}
 
-\section{Unit tests ParkAssistControllerTest}
+\section{Unit tests for ParkAssistControllerClass}
 
 $ParkAssistControllClass$ generates a brake pedal position based on a defined time using a look-up table.
 There are two equivalence classes defined for the $ParkAssistControllClass$ that cover the brake pedal position if the time is inside the time span of the look-up table and if the time is greater than the time span of the look-up table.
 
 \begin{table}[H]
 \centering
-\caption{Equivalence classes for unit testing ParkAssistControll}
+\caption{Equivalence classes for unit testing ParkAssistControllClass}
 \begin{adjustbox}{width=0.5\textwidth, center=\textwidth}
 \renewcommand{\arraystretch}{1}
 \begin{tabular}{lllllll}
@@ -691,7 +692,7 @@ Based on the equivalence classes three test cases have been derived. Two test ca
 
 \begin{table}[H]
 \centering
-\caption{Unit test test cases pulse signal frequency generation}
+\caption{Test cases for unit testing ParkAssistControllerClass}
 \begin{adjustbox}{width=0.5\textwidth, center=\textwidth}
 \renewcommand{\arraystretch}{1}
 \begin{tabular}{llll}
@@ -704,14 +705,14 @@ time\textunderscore 2\textunderscore 0 & 2.0 & 0.0 \\
 \label{tbl:D9_FrequencyGenerationTestCases}
 \end{table}
 
-\section{Unit tests FrequencyComputationTest}\label{sec:unitfrequency}
+\section{Unit tests for FrequencyComputationClass}\label{sec:unitfrequency}
 
 $FrequencyComputationClass$ generates a frequency based on a defined position and velocity using a look-up table.
 There are three equivalence classes defined for the $FrequencyComputationClass$ class that cover three output scenarios: zero frequency, variable frequency based on a defined function (computed from look-up table) and continuous frequency. 
 
 \begin{table}[H]
 \centering
-\caption{Equivalence classes for unit testing pulse signal frequency generation}
+\caption{Equivalence classes for unit testing FrequencyComputationClass}
 \begin{adjustbox}{width=1\textwidth, center=\textwidth}
 \renewcommand{\arraystretch}{1}
 \begin{tabular}{lllllll}
@@ -726,7 +727,7 @@ irrelevant & v = 0m/s or v > 1m/s & Zero\\
 Table \ref{tbl:D9_FrequencyGenerationTestCases} shows the test cases derived from the equivalence classes above.
 \begin{table}[H]
 \centering
-\caption{Unit test test cases pulse signal frequency generation}
+\caption{Test cases for unit testing FrequencyComputationClass}
 \begin{adjustbox}{width=1\textwidth, center=\textwidth}
 \renewcommand{\arraystretch}{1}
 \begin{tabular}{llll}
@@ -744,14 +745,14 @@ frequencyMid                          & 1.0                         & 1.5       
 \label{tbl:D9_FrequencyGenerationTestCases}
 \end{table}
 
-\section{Unit tests PulseSignalClass}
+\section{Unit tests for PulseSignalClass}
 
 $PulseSignalClass$ generates a pulse signal based on a defined frequency.
 There are three equivalence classes defined for the $PulseSignalClass$ class that refer to the equivalence classes in section \ref{sec:unitfrequency}. 
 The table below shows the equivalence classes for the pulse signal.
 \begin{table}[H]
 \centering
-\caption{Equivalence classes for unit testing pulse signal}
+\caption{Equivalence classes for unit testing PulseSignalClass}
 \begin{adjustbox}{width=1\textwidth, center=\textwidth}
 \renewcommand{\arraystretch}{1}
 \begin{tabular}{lllllll}
@@ -767,7 +768,7 @@ The derived test cases are shown below.
 
 \begin{table}[H]
 \centering
-\caption{Pulse signal test cases}
+\caption{Test cases for unit testint PulseSignalClass}
 \renewcommand{\arraystretch}{1}
 \begin{tabular}{lll}
 \textbf{Frequency} & \textbf{dts} & \textbf{Expected result} \\\hline
@@ -780,15 +781,40 @@ The derived test cases are shown below.
 
 \chapter{D10: Development and implementation of a system test environment for ASCET simulation}\label{cha:D10}
 
-The system test environment in Figure \ref{fig:D10} features an oscilloscope and several textboxes. 
+The goal of the system test is to see if the system fulfils all given requirements. The system test is using a state machine that can be seen in figure \ref{fig:D10_sm}. The state machine checks requirements R1 and R3. The status of the state machine is set to true if no error occurred. There are three type of failures that lead to an error:
+
+\begin{itemize}
+\item The velocity equals zero and the pulse signal is high. If the velocity equals zero, the pulse signal has to be low (R3).
+\item The velocity is greater than zero, the position is greater or equal 1.9 m and the pulse signal is low. In this case the pulse signal has be continuous (high) (R3). 
+\item The position of the car exceeds 2 m. The car needs to stop within 2 m (R1).
+\end{itemize}  
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{images/stateMachine.png}
+\caption{State machine}
+\label{fig:D10_sm}
+\end{figure}
+
+The class $StateMachineBD$ that is shown in figure \ref{fig:D10_smbd} is responsible for passing the velocity, the pulse signal and the position to the state machine as well as sending the system test message.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{images/stateMachineBD.png}
+\caption{ASCET block diagram of $StateMachineBD$}
+\label{fig:D10_smbd}
+\end{figure}
+
+To execute the experiment, a schedule has to be defined. The used schedule is described in chapter \ref{cha:D7} and can be seen in Figure \ref{fig:D7_schedule}. With the parameters that have been evaluated in the previous chapters, the car stops at 1.905 m.
+
+The system test environment in figure \ref{fig:D10} features an oscilloscope and several textboxes. 
 The oscilloscope shows the velocity, acceleration and position of the car as well as the ultrasonic distance signal and the pulse signal. The textboxes show the value of the signal in the oscilloscope next to them. 
-The checkbox at the right bottom shows whether the car did a full brake within less than 2m.
+The check box at the right bottom shows the results of the state machine.
+The graphs plotted by the oscilloscope are evaluated in the following to check the requirements of the system that are not covered by the state machine. 
 
-With the parameters that have been evaluated in the previous chapters, the car stops at 1.905 m.
-
-The following Figure \ref{fig:D10} shows the simulation results. The upper channel of the oscilloscope shows the velocity that becomes zero once it is below 0.29 km/h after approximately 1.4 s (R5).
+The upper channel of the oscilloscope shows the velocity that becomes zero once it is below 0.29 km/h after approximately 1.4 s (R5).
 The channel below the velocity shows the brake pedal function p(t) that follows a smooth human like behaviour (R2). The middle channel shows the acceleration that is influenced by p(t). The channel below the acceleration shows the position of the car in turquoise and the ultrasonic distance in blue. The ultrasonic distance is implemented based on R4.
-The third subplot shows the covered distance of the car, which is clearly under the 2 m mark (R1). 
+%The third subplot shows the covered distance of the car, which is clearly under the 2 m mark. 
 The bottom channel shows the pulse signal. The period of the pulse signal is getting shorter once the car approaches the target position. The plot also shows that the pulse signal starts once the car is slower than 3.6 km/h (\^= 1m/s) and ends once the car is standing. The exact stopping position of the car is 1.905 m which is why the pulse signal becomes continuous for a short time and then gets reset, once the car stops (R3). 
 
 \begin{figure}[H]
@@ -796,15 +822,6 @@ The bottom channel shows the pulse signal. The period of the pulse signal is get
 \includegraphics[width=1\textwidth]{images/ascet_experiment_environment.png}
 \caption{ASCET Experiment Environment}
 \label{fig:D10}
-\end{figure}
-
-For monitoring whether the car stopped within 2 m, a new class is introduced that is shown in Figure \ref{fig:D10_systest}. As can be seen in the block diagram, the class consists of a simple check whether the velocity is zero and the position less than 2 m. 
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=1\textwidth]{images/Blockdiagramm_systemtest.png}
-\caption{ASCET block diagram of $SystemTestEnvironment$}
-\label{fig:D10_systest}
 \end{figure}
 
 
@@ -823,7 +840,7 @@ Using multiple ultrasonic distributed over the front of the vehicle might be abl
 \begin{figure}[H]
 \centering
 \includegraphics[width=.7\textwidth]{images/us_drawing.pdf}
-\caption{Ultrasonic sensor limits 2}
+\caption{Ultrasonic sensor limits}
 \label{fig:D13_USLimitAbove}
 \end{figure}
 With one ultrasonic sensor, also blind spots over and under an ultrasonic sensor can occur.
@@ -837,7 +854,7 @@ But then the driver would be responsible for safe parking, not the ParkAssist.
 \begin{figure}[H]
 \centering
 \includegraphics[width=.7\textwidth]{images/us_drawing2.pdf}
-\caption{Ultrasonic sensor limits}
+\caption{Ultrasonic sensor limits 2}
 \label{fig:D13_USLimitSide}
 \end{figure}
 
